# studies

./: .gitmodules  README.md
01_cmake/: 01_cmake  01_cmake.cbp  01_cmake_test  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  main.h  readme.md  test.cpp
02_tdd/: 02_tdd  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  readme.md
02_tdd/include/: Dummy.h  TextWrapper.h
02_tdd/src/: Dummy.cpp  TextWrapper.cpp  (+1 more)
03_sequence_containers/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  readme.md
04_associative_containers/: CMakeLists.txt  readme.md
05_stl_benchmark/: CMakeLists.txt  Report.md  readme.md
05_stl_benchmark/bench/: CMakeLists.txt
05_stl_benchmark/bench/include/: BenchIncludes.h
05_stl_benchmark/bench/src/: DummyBench.cpp  ExampleBench.cpp  LargeBench.cpp  ListBench.cpp  ListBenchLarge.cpp  ListBenchMedium.cpp  MapBench.cpp  MapLargeBench.cpp  MapMediumBench.cpp  MediumBench.cpp  PauseAndResumeBench.cpp  SmallBench.cpp  UnorderedMultisetBench.cpp  UnorderedMultisetLargeBench.cpp  UnorderedMultisetMediumBench.cpp
06_observer_pattern/: CMakeLists.txt
06_observer_pattern/bench/: CMakeLists.txt
06_observer_pattern/bench/include/: BenchIncludes.h
06_observer_pattern/include/: Acceleration.h  Displacement.h  Observer.h  Obsevable.h  Speed.h
06_observer_pattern/src/: Acceleration.cpp  Displacement.cpp  Observable.cpp  Speed.cpp  main.cpp
06_observer_pattern/test/: CMakeLists.txt
06_observer_pattern/test/src/: DummyTest.cpp
06_observer_pattern/uml/: CMakeLists.txt  diagram.puml
07_abstract_factory_pattern/: CMakeLists.txt  readme.md
08_fake_mock_or_stub/: CMakeLists.txt  readme.md
08_fake_mock_or_stub/include/: Observer.h  ObserverImpl.h  Point.h  Space.h  SpaceImpl.h  Time.h  TimeImpl.h  Universe.h
08_fake_mock_or_stub/src/: ObserverImpl.cpp  SpaceImpl.cpp  TimeImpl.cpp  Universe.cpp  main.cpp
08_fake_mock_or_stub/test/: CMakeLists.txt
08_fake_mock_or_stub/test/include/: ObserverMock.h  SpaceMock.h  TestIncludes.h  TimeMock.h
08_fake_mock_or_stub/test/src/: UniverseTest.cpp
08_fake_mock_or_stub/uml/: CMakeLists.txt  class.puml
10_state_machine/: 10_state_machine.pro  mainwindow.cpp  mainwindow.h  readme.md
11_QML/: 11_QML.pro  Displacement.cpp  Displacement.h  acceleration.cpp  acceleration.h  main.cpp  main.qml  speed.cpp  speed.h
QtQuickDemo/: QtQuickDemo.pro  demo.cpp  demo.h  main.cpp  main.qml
build-10_state_machine-Clone_of_Desktop-Debug/: 10_state_machine  Makefile  moc_mainwindow.cpp  ui_mainwindow.h
build-10_state_machine-Desktop-Debug/: 10_state_machine  Makefile
build-11_QML-Desktop-Debug/: 11_QML  Makefile  moc_Displacement.cpp  moc_acceleration.cpp  moc_speed.cpp  qrc_qml.cpp
build-QtQuickDemo-Desktop-Debug/: Makefile  QtQuickDemo  qrc_qml.cpp
(+112 files in other folders)
